Modified code to retrieve step extent dataset and to output modis images for correct week of data.

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -163,7 +163,7 @@
    ],
    "source": [
     "# load extent look up table \n",
-    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2027.csv')\n",
+    "extents_lut = pd.read_csv('data/step_extents/random_paths/LA2_step_ex_w2060.csv')\n",
     "\n",
     "# test\n",
     "#extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2300.csv')"
@@ -320,7 +320,7 @@
    "source": [
     "# get output folder paths for current MODIS images and images from week prior\n",
     "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
-    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/2027')\n",
+    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/2060')\n",
     "\n",
     "# test\n",
     "#out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis/cloudmasked/2300')"
@@ -1317,17 +1317,17 @@
    ],
    "source": [
     "# test for downscaling with interpolation\n",
-    "start_date = ee.Date(large_extent.loc['start_date_prev_week'], 'Africa/Maputo')\n",
-    "end_date = ee.Date(large_extent.loc['end_date'], 'Africa/Maputo')\n",
-    "modis = modis_interpolated.filterDate(start_date, end_date).select(['nir', 'red'])\n",
-    "modis_reproj = modis.map(reprojectModis)\n",
-    "modis_clipped = modis_reproj.map(clipToAOI)\n",
+    "#start_date = ee.Date(large_extent.loc['start_date_prev_week'], 'Africa/Maputo')\n",
+    "#end_date = ee.Date(large_extent.loc['end_date'], 'Africa/Maputo')\n",
+    "#modis = modis_interpolated.filterDate(start_date, end_date).select(['nir', 'red'])\n",
+    "#modis_reproj = modis.map(reprojectModis)\n",
+    "#modis_clipped = modis_reproj.map(clipToAOI)\n",
     "#geemap.ee_export_image_collection(modis_clipped, out_dir = out_dir, region = large_region)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "df21c7ba",
    "metadata": {},
    "outputs": [
@@ -1371,128 +1371,128 @@
      "text": [
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_06.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_25.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f72ff0014085b6465b0322407197f49c-333363d9c230ff810fbb662859cd8e10:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/196b406e2928f95af997d2ace1312b97-7c5414b205278b6a08801129125b143e:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_06.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_25.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_30.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_18.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d6edcb71c805721fcc4df63a9127a59b-463af572f8f51f77906662dbee8e0c48:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e47e80e31b98bd90e4873c2ba86f409b-7906807ca5ef77aa234ce6accafb365f:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_30.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_18.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_07.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_26.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ba1b08c42c2ebbad48ca8a539b5b20fc-9a0896bd54475da186eb12bb950747bb:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8c1a532a789fcce486f21a3cbe070a88-9fc44661553f3b68fd2d0f5e6a7106d6:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_07.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_26.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_31.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_19.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/b4755391598e1456951cdfe1a84e95eb-92173cf74fa264daae9c4da53740dfdb:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/23ad0a9b0ebd597f97be28611b75ab17-9f6428f6cde7c04c27ba796cf9e277b9:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_31.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_19.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_08.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_27.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/dde0b855f1bbc71f6c37ae39294d7478-f6d6c0eca9d7726f8b2d7da6f870dec4:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/dd97eb3600a72e54fce00aba63732210-89a8514745f38bcbc9a899a0d60aa322:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_08.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_27.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_01.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_20.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/4310058c92100dfa38027abf8f914173-8c80efde0961d0451317113ea2ed95c0:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/bbe72a390568dead5e27ac700a6f20c2-b0a41f06729866e06b4f0201eb74f8aa:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_01.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_20.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_09.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_28.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/82d232d6d6d53bae2c25766787935e31-e96491fa0e0de52241db0c8879278678:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/36c028ecf625e2284b936a84b6ca74bd-8fb27fb5b59529f2b66e8f74bf77ac1a:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_09.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_28.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_02.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_21.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8f59a07e0bbefea8a6a1981409de1ec4-61556c4a79665b67cf305be24008de19:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/3c1a6ed8e83720005a8ebb266941ac60-b706076a9fe60e19816ea65ce7e82882:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_02.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_21.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_10.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_29.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/46918adf419d651cfc1227057ebdea14-8c3658ae5aa82dd0dda64785d7ecd124:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/894b4237b5443198b5c9a66e0f771be2-605178170b29d84502c2a6c25af1bec9:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_10.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_29.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_03.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_22.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/55630a21489582c82cbbeab56c8f4087-1ebdf93e8a0de7e001d37dca1f4fc405:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8e90780ab3d18c2d20bd4adefb2447a0-5e954f39f386d68b37b376c4d88ef390:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_03.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_22.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_11.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_30.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/571030940a594da9920d90c74e531687-b0b0d025e68d42704eeb6de1231ca3e2:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/2afec802e5a8794255170c86c2ce88be-6fc93325de32c8d106fe5e2e3449d829:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_11.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_30.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_04.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_23.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/166fe426007116cc9d23e2718e7f6701-129397dcfa127486b4f19115658dd419:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/c6e31b132b46af5122463160f3bd463c-66a04eb7a61ae021ae2fc3bb7974fde0:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_04.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_23.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_12.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_07_01.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f82f56ab306855bc27f74e947c04b0bc-4d4430389c22c433562f5da0f746e035:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/c74ef1d7c43cdcd3a6f7a7e8c2dcdffc-74e11b49eb6093f24005748572b3e54c:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_12.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_07_01.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_05.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_24.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/47b8f83752da37663a294e7b3bf75670-05bf1edf7e7cd10c2677cdb6e99bacb2:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ceffae360c2b96fa05e2b91f1a88ddaf-6582b868db6470e5af2d5c2032734170:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_05.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2060/2009_06_24.tif\n",
       "\n",
       "\n"
      ]
