Added consistent labeling to all step scripts and their functions. All functions can now have specific suffixes that allows different scenarios to be run

--- a/3_RetrieveMODISImages.ipynb
+++ b/3_RetrieveMODISImages.ipynb
@@ -283,13 +283,20 @@
     "    ID = run_settings_table.iloc[0,0]\n",
     "    week = str(run_settings_table.iloc[0,1])\n",
     "    random_data_method = run_settings_table.iloc[0,2]\n",
+    "    input_suffix = run_settings_table.iloc[0,5]\n",
+    "    output_suffix = run_settings_table.iloc[0,6]\n",
     "\n",
-    "\n",
+    "    # replace NA from suffix columns of run settings to empty strings\n",
+    "    if input_suffix.isna(): \n",
+    "        input_suffix = ''\n",
+    "    if output_suffix.isna(): \n",
+    "        output_suffix = ''\n",
+    "        \n",
     "\n",
     "    ###########\n",
     "    ## Load step extents LUT\n",
     "    ###########\n",
-    "    extents_lut = pd.read_csv('data/' + ID + '/' + week + '/' + '2_a1_step_extents_LUT_' + random_data_method + '.csv')\n",
+    "    extents_lut = pd.read_csv('data/' + ID + '/' + week + '/' + '2_a1_step_extents_LUT_' + random_data_method + input_suffix + '.csv')\n",
     "\n",
     "\n",
     "\n",
@@ -339,7 +346,7 @@
     "    ## Define path of output directory \n",
     "    ###########\n",
     "    # define output folder paths for current MODIS images and images from week prior\n",
-    "    out_dir = 'data/' + ID + '/' + week + '/' + '3_a1_modis_images_' + random_data_method + '/'\n",
+    "    out_dir = 'data/' + ID + '/' + week + '/' + '3_a1_modis_images_' + random_data_method + output_suffix + '/'\n",
     "    \n",
     "    \n",
     "    \n",
@@ -536,7 +543,7 @@
     "# read the table with all run settings\n",
     "all_runs = pd.read_csv('data/run_settings_LA14_LTS_rerun2.csv', index_col = 0)\n",
     "\n",
-    "# iteratte over each entry in the table \n",
+    "# iterate over each entry in the table \n",
     "for i in range(len(all_runs)):\n",
     "    # save the run settings to be read in the function\n",
     "    row = all_runs.iloc[[i]]\n",
