Removed unnecessary scripts that were failed attempts at retrieving images using GEE Python API. Cleaned the 2 main codes for image retrieval and updated their headers. Moved a few scripts to the directory of deprecated scripts that I want to keep for future reference.

--- a/3_RetrieveMODISImages.ipynb
+++ b/3_RetrieveMODISImages.ipynb
@@ -51,7 +51,7 @@
     "##       0_single_run_settings.csv\n",
     "##       2_a1_step_extents.csv\n",
     "## Script outputs: \n",
-    "##       3_a1_modis_images (folder) > [daily_MODIS_NDVI_250m_date].tif (intermediate output) & 3_a2_modis_ndvi.tif (intermediate output)\n",
+    "##       3_a1_modis_images (directory) --> [dateDailyMODISNDVI250m].tif & mean_ndvi.tif \n",
     "\n",
     " \n",
     "\n",
