--- a/3bis_RetrieveDownscalingImages.ipynb
+++ b/3bis_RetrieveDownscalingImages.ipynb
@@ -5828,21 +5828,20 @@
     "## Jacotte Monroe \n",
     "## 19/03/24\n",
     "\n",
-    "## CHANGE DESCRIPTION BECAUSE THIS WAS COPY PASTED!!!\n",
-    "## Script that reads the spatial and temporal extents and retrieves the matching MODIS 250m images. \n",
+    "\n",
+    "## Script that reads the spatial and temporal extents and retrieves the matching MODIS 250m and Landsat 8 30m images. \n",
     "## MODIS dataset is cloudmasked using a bitmask from MODIS 500m, then gap filled using temporal linear interpolation. \n",
+    "## Landsat pixel values are offset and rescaled to represent reflectance values. \n",
     "## Each image is reprojected to EPSG 32733 (Namibia projection) and clipped to study area. \n",
     "## NDVI is calculated. \n",
+    "## NOTE: The study area extent is split into smaller geometries to facilitate Landsat image retrieval (avoid requesting too large files at once). \n",
+    "##          The subscenes will be stitched together in a later step (other script). \n",
     "## Script inputs: \n",
     "##       0_single_run_settings.csv\n",
     "##       2_a1_step_extents.csv\n",
     "## Script outputs: \n",
-    "##       3_a1_modis_images (folder) > [daily_MODIS_NDVI_250m_date].tif (intermediate output) & 3_a2_modis_ndvi.tif (intermediate output)\n",
-    "\n",
-    "## NOTE: Landsat images are large and may not get exported due to size limit. If that is the case, a manual download option is available. \n",
-    "##       Run GEE code: https://code.earthengine.google.com/8b4653d8807cfa7ba185b45e18243e6d\n",
-    "##       The coordinates of the large region must be entered manually in the GEE script, then run, and export images in Task\n",
-    "\n",
+    "##       3_b1_modis_images_downscaling (directory) --> [dateDailyMODISNDVI250m].tif (& mean_ndvi.tif)\n",
+    "##       3_b2_landsat_images_downscaling (directory) --> [subSceneGridPositionLevel1_subSceneGridPositionLevel2] (directory) x 16 --> LC08_17907[3/4]_[DateLandsat].tif \n",
     "\n",
     "\n",
     "###########\n",
@@ -5942,6 +5941,7 @@
     "\n",
     "\n",
     "def retrieveImagesForDownscaling(): \n",
+    "    \n",
     "    ###########\n",
     "    ## Read run settings \n",
     "    ###########\n",
@@ -5958,16 +5958,7 @@
     "\n",
     "    input_suffix = '_newPathWithCV'\n",
     "    output_suffix = '_newPathWithCV'\n",
-    "\n",
-    "    # check that the week setting doesn't preceed Landsat 8 data --> week >= 2259\n",
-    "    # Landsat starts 2013-03-18 meaning that week cannot be before 2013-04-18 (because 1 month buffer, see code below)\n",
-    "    # source: https://developers.google.com/earth-engine/datasets/catalog/LANDSAT_LC08_C02_T1_L2\n",
-    "    # if the week is before 2013-04-18, skip the iteration and go to next run \n",
-    "    # source: https://www.tutorialspoint.com/python/python_loop_control.htm\n",
-    "    # CODE CURRENTLY GETTING ERROR THAT ITS NOT IN LOOP WHICH IS TRUE SO FOR NOW COMMENTED OUT AND HAVE TO MAKE SURE I GET THE RIGHT WEEKS\n",
-    "    #if week < 2259: \n",
-    "     #   continue\n",
-    "    \n",
+    "   \n",
     "    \n",
     "    \n",
     "    ###########\n",
